# rust-ebaz4205

./: .gitignore  README.md  flake.nix
src/: Cargo.toml  Makefile  armv7-none-eabihf.json
src/.cargo/: config
src/firmware/: Cargo.toml  link.x
src/firmware/src/: led.rs  main.rs
src/gateware/: ebaz4205.py
